[gd_scene load_steps=27 format=3 uid="uid://6n6tw3hrvg8i"]

[ext_resource type="Script" uid="uid://b6mn5m38gbdip" path="res://scripts/game_intro.gd" id="1_qohg2"]
[ext_resource type="PackedScene" uid="uid://c21w7v6ghunna" path="res://level/finger.tscn" id="2_44x8d"]
[ext_resource type="PackedScene" uid="uid://bc8gum0yfovaq" path="res://player/player.tscn" id="2_qohg2"]
[ext_resource type="PackedScene" uid="uid://bthiyrqhjc2pr" path="res://level/starting_room.tscn" id="3_qohg2"]
[ext_resource type="PackedScene" uid="uid://by81628uy2fly" path="res://ui/cutscene_ui.tscn" id="3_vkbyq"]
[ext_resource type="PackedScene" uid="uid://cewkyl7ivv7ub" path="res://level/fuses/rigidbody_red_fuse.tscn" id="4_xii2b"]
[ext_resource type="PackedScene" uid="uid://dpj447c6lgdg3" path="res://level/fuses/rigidbody_green_fuse.tscn" id="5_rhqlf"]
[ext_resource type="PackedScene" uid="uid://b485h3l0sfjvt" path="res://level/fuses/rigidbody_blue_fuse.tscn" id="6_l5lfc"]
[ext_resource type="Shader" uid="uid://d2wx3kwmqlf1m" path="res://shader/chromatic.gdshader" id="7_ivpvi"]
[ext_resource type="PackedScene" uid="uid://qxcccn7ywulv" path="res://level/fuses/rigidbody_yellow_fuse.tscn" id="7_m3nah"]
[ext_resource type="PackedScene" uid="uid://c6u3h4ohbkawm" path="res://level/note.tscn" id="7_xii2b"]
[ext_resource type="PackedScene" uid="uid://dm7ywil3i4h4s" path="res://level/Items/pickable_lighter.tscn" id="12_rhqlf"]
[ext_resource type="PackedScene" uid="uid://cvrvuskojt23m" path="res://level/power_switch.tscn" id="13_l5lfc"]
[ext_resource type="PackedScene" uid="uid://67lx0vmub21w" path="res://level/doll_1.tscn" id="14_m3nah"]

[sub_resource type="Gradient" id="Gradient_qohg2"]
offsets = PackedFloat32Array(0, 0.363208, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.260402, 0.260402, 0.260402, 1, 0.603248, 0.603248, 0.603248, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vkbyq"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ktfr2"]
noise = SubResource("FastNoiseLite_vkbyq")
color_ramp = SubResource("Gradient_qohg2")
seamless = true

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5gx2l"]
sky_top_color = Color(0.0292021, 0.0439498, 0.0845648, 1)
sky_horizon_color = Color(0, 0, 0, 1)
sky_cover = SubResource("NoiseTexture2D_ktfr2")
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_qohg2"]
sky_material = SubResource("ProceduralSkyMaterial_5gx2l")

[sub_resource type="Environment" id="Environment_vkbyq"]
background_mode = 2
sky = SubResource("Sky_qohg2")
tonemap_mode = 2
tonemap_exposure = 1.5
tonemap_white = 7.0
ssao_enabled = true
ssil_enabled = true
glow_enabled = true
glow_hdr_threshold = 0.0
fog_light_color = Color(0.822082, 0.420959, 0.246029, 1)
fog_light_energy = 0.5
fog_density = 0.001
fog_depth_begin = 0.0
volumetric_fog_anisotropy = 0.51
volumetric_fog_length = 3.0
volumetric_fog_temporal_reprojection_enabled = false

[sub_resource type="Animation" id="Animation_qohg2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cutscene_camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.432842, -0.759218, 0.541052)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cutscene_camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3.83145, 0.760775, 3.64125)]
}

[sub_resource type="Animation" id="Animation_5gx2l"]
resource_name = "cutscene"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cutscene_camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.7, 5.7, 8.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.432842, -0.759218, 0.541052), Vector3(-0.324631, -1.04545, 0.541052), Vector3(-0.246091, -1.04545, 0.541052), Vector3(-0.432842, -0.759218, 0.541052)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cutscene_camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3.831, 0.83, 3.321)]
}

[sub_resource type="Animation" id="Animation_ktfr2"]
resource_name = "cutscene1"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cutscene_camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.93, 5.26667, 6.88, 8.17, 9.8, 12.59, 14.7694),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.30027, -0.759218, 0.865683), Vector3(1.15017, -1.04545, 0.726057), Vector3(1.30027, -0.472984, 0.865683), Vector3(0.216421, -0.472984, 0.865683), Vector3(0.216421, -0.472984, 0.541052), Vector3(0, -0.0401426, 0), Vector3(-0.757473, -0.0401426, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cutscene_camera:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7.4, 8.88, 11.9, 12.6667, 13.2667, 14.78),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-3.741, 0.83, 3.321), Vector3(-3.741, 0.83, 3.321), Vector3(-3.471, 0.9, 3.251), Vector3(-3.471, 1.1, 2.991), Vector3(-3.471, 1.1, 2.991), Vector3(-3.471, 0.95, 2.976), Vector3(-3.471, 1.659, 2.635)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkbyq"]
_data = {
&"RESET": SubResource("Animation_qohg2"),
&"cutscene": SubResource("Animation_5gx2l"),
&"cutscene1": SubResource("Animation_ktfr2")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0v1st"]
shader = ExtResource("7_ivpvi")
shader_parameter/aberration_intensity = 2.5
shader_parameter/aberration_threshold = 0.8
shader_parameter/grain_intensity = 0.15
shader_parameter/min_lum = 0.0
shader_parameter/max_lum = 1.0
shader_parameter/time_scale = 0.5
shader_parameter/vignette_radius = 0.7
shader_parameter/vignette_softness = 0.75
shader_parameter/vignette_intensity = 2.0
shader_parameter/vignette_contrast = 2.2
shader_parameter/vignette_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_m3nah"]
size = Vector3(4.76465, 3.2196, 1.83508)

[node name="Level" type="Node3D"]
script = ExtResource("1_qohg2")
finger_scene = ExtResource("2_44x8d")
red_fuse_scene = ExtResource("4_xii2b")
green_fuse_scene = ExtResource("5_rhqlf")
blue_fuse_scene = ExtResource("6_l5lfc")
yellow_fuse_scene = ExtResource("7_m3nah")
note_scene = ExtResource("7_xii2b")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vkbyq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.99914, -0.0234915, -0.0341803, 0.0414746, 0.565919, 0.823417, 0, -0.824126, 0.566406, 0, 7.58255, 2.80703)
visible = false
shadow_enabled = true

[node name="map" parent="." instance=ExtResource("3_qohg2")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vkbyq")
}

[node name="cutscene_camera" type="Camera3D" parent="."]
transform = Transform3D(0.7704749, -0.12610386, -0.62487185, 0.46753964, 0.7781168, 0.41945192, 0.4333292, -0.6153302, 0.65847784, -3.83145, 0.760775, 3.64125)

[node name="cutscene_ui" parent="." instance=ExtResource("3_vkbyq")]

[node name="Player" parent="." instance=ExtResource("2_qohg2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.471, 1, 2.635)

[node name="CanvasLayer" parent="Player/player_ui" index="0"]
layer = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="Player/player_ui" index="2"]

[node name="ColorRect" type="ColorRect" parent="Player/player_ui/CanvasLayer2"]
material = SubResource("ShaderMaterial_0v1st")
offset_right = 580.0
offset_bottom = 328.0

[node name="FingerSpawnPoints" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.708652, 1.14408, 3.78356)

[node name="Marker3D2" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.91887, 0.369498, 0.301202)

[node name="Marker3D3" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.95934, 1.19556, -11.6631)

[node name="Marker3D4" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198583, 0.80277, -4.20781)

[node name="Marker3D5" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.94478, 0.665609, -12.1987)

[node name="Marker3D6" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.232969, 0.37062, -4.58473)

[node name="Marker3D7" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.95394, 0.527008, -21.4799)

[node name="Marker3D8" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0099, 0.361393, -25.8054)

[node name="Marker3D9" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.7709, 1.24574, -25.8054)

[node name="Marker3D10" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0565, 0.985487, -13.5877)

[node name="Marker3D11" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0786, 0.270254, -13.5877)

[node name="Marker3D12" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0399, 0.282064, -10.7421)

[node name="Marker3D13" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0251, 1.59885, -10.8754)

[node name="Marker3D14" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.4727, 1.5854, -21.7876)

[node name="Marker3D15" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.4727, 0.723643, -22.147)

[node name="Marker3D16" type="Marker3D" parent="FingerSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.5647, 0.341055, -1.45972)

[node name="fuse_spawn_points" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="fuse_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.1742, 1.33515, -17.1532)

[node name="Marker3D2" type="Marker3D" parent="fuse_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.8827, 0.542722, -11.9494)

[node name="Marker3D3" type="Marker3D" parent="fuse_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.4696, 1.35352, -22.2551)

[node name="Marker3D4" type="Marker3D" parent="fuse_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.8752, 0.910083, -7.64312)

[node name="Marker3D5" type="Marker3D" parent="fuse_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.5106, 1.30581, -9.21833)

[node name="note_spawn_points" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="note_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.70244, 1.15129, -22.3386)

[node name="interactable" type="Node3D" parent="."]

[node name="Node3D" parent="interactable" instance=ExtResource("12_rhqlf")]
transform = Transform3D(-1.79107e-08, 0.409748, 0.912199, -1, -4.37114e-08, 0, 3.98735e-08, -0.912199, 0.409748, -2.66319, 1.07746, 0.786281)

[node name="Area3D" type="Area3D" parent="interactable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.29974, 0.328904, -9.87413)

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactable/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.050293, 1.1098, 2.21192)
shape = SubResource("BoxShape3D_m3nah")

[node name="PowerSwitches" type="Node3D" parent="."]

[node name="PowerSwitch" parent="PowerSwitches" instance=ExtResource("13_l5lfc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 34.9754, 1.63421, -19.9939)

[node name="PowerSwitch3" parent="PowerSwitches" instance=ExtResource("13_l5lfc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 37.772, 1.63421, 17.4195)

[node name="PowerSwitch2" parent="PowerSwitches" instance=ExtResource("13_l5lfc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 6.57811, 1.63421, -17.5902)

[node name="PowerSwitch4" parent="PowerSwitches" instance=ExtResource("13_l5lfc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.23617, 1.63421, -3.97844)

[node name="Stalker" parent="." instance=ExtResource("14_m3nah")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.98417, 0, -14.2011)

[node name="Game_Duration" type="Timer" parent="."]
wait_time = 1200.0
one_shot = true
autostart = true
ignore_time_scale = true

[node name="shadowCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.627573, 1.6129777, -2.9875278)

[node name="doll_floor1_spawn_points" type="Node3D" parent="."]
visible = false

[node name="Marker3D" type="Marker3D" parent="doll_floor1_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.885672, 0, -11.399621)

[node name="Marker3D2" type="Marker3D" parent="doll_floor1_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 33.039425, 0, -28.501478)

[node name="Marker3D3" type="Marker3D" parent="doll_floor1_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.75818, 0, 15.325812)

[node name="Marker3D4" type="Marker3D" parent="doll_floor1_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.346111, 0, 2.16051)

[node name="doll_floor1_roaming_locations" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.537575, 0, 12.037337)

[node name="Marker3D2" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.605953, 0, -20.247046)

[node name="Marker3D3" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.985924, 0, -24.789396)

[node name="Marker3D4" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 33.034664, 0, -29.104565)

[node name="Marker3D5" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37.303307, 0, -18.955687)

[node name="Marker3D6" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.465374, 0, 15.412483)

[node name="Marker3D7" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.7882966, 0, 1.5414894)

[node name="Marker3D8" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.010537, 0, 1.9925227)

[node name="Marker3D9" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.557062, 0, -8.029608)

[node name="Marker3D10" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.997269, 0, -7.0822587)

[node name="Marker3D11" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.997269, 0, -33.432182)

[node name="Marker3D12" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.516205, 0, -33.432182)

[node name="Marker3D13" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 41.769703, 0, -19.128437)

[node name="Marker3D14" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 41.769703, 0, -14.782566)

[node name="Marker3D15" type="Marker3D" parent="doll_floor1_roaming_locations" groups=["roaming1_locations"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 41.769703, 0, -10.255362)

[connection signal="body_entered" from="interactable/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Game_Duration" to="." method="_on_game_duration_timeout"]

[editable path="map"]
[editable path="map/Puzzle/fusebox"]
[editable path="cutscene_ui"]
[editable path="Player"]
[editable path="Player/player_ui"]
[editable path="Player/player_ui/pause_menu"]
